2003-11-02  Callum McKenzie  <callum@physics.otago.ac.nz>

        * NoGnome/*: Removed this directory since it has not been possible
	to compile without gnome support since 2.2. Use the original
	curses package if you want a curses version.
	
2003-10-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am: Removed *_DISABLE_DEPRECATED.

2003-10-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am (install-data-local): Change the way gconf files are
	installed. This should improve things for people building outside
	the source tree. See bug #123192.

2003-10-06  Callum McKenzie  <callum@physics.otago.ac.nz>

	* clist.c (update_score_cell): We shouldn't be trying to free
	something we didn't malloc. Fixes bug #123735.

2003-10-01  Callum McKenzie  <callum@physics.otago.ac.nz>

	* yahtzee.c (calc_random): i18n fix, see bug #123586.

2003-08-05  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gyahtzee.c: GConf return value checks.

2003-08-03  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gtali.schemas.in:
	Typo in the schema description. Also moved the default names
	inside the locale tags so that they can be translated to something
	more suitable for a given area (I know, area != language, but it's
	as good as it's going to get)..

	* setup.c:
	* gyahtzee.c:
	* help/C/gtali.xml:
	Delay between rolls and show-thoughts have been
	gconfified. Show-thoughts is now in fact only available via gconf
	since dumps to standard out should not be accessible to the
	ignorant users.

	* setup.c (setup_game): Remove old, old, gtk 1.x code.

	* help/C/gtali.xml: 2.4 updates, images not updated yet.

	* setup.c: 
	* yahtzee.h:
	* yahtzee.c:
	* gtali.schemas.in
	* gyahtzee.c: Removed the "Extra Yahtzee Bonus" and "Enforce Joker
	Rules" dialogs since while the values where set they were never
	used anywhere in the actual game. Since I don't know what they are
	meant to do and no one is complaining about them I have removed
	the code entirely.
